# week3_exercises

./: .gitignore
Automata_Example/source/: CMakeLists.txt  automaton.cpp  main.cpp
